[metadata]
name = langchain-iris
version = 0.1.1
description = The InterSystems IRIS adoption for Langchain
long_description = file: README.md
url = https://github.com/caretdev/langchain-iris
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
keywords="InterSystems IRIS",
project_urls =
    Source = https://github.com/caretdev/langchain-iris
    Tracker = https://github.com/caretdev/langchain-iris/issues
